"""initial schema from domain models

Revision ID: 0be51fd8e0f5
Revises:
Create Date: 2026-07-30 00:35:04.314278

"""

from typing import Sequence, Union

import sqlalchemy as sa
from alembic import op

# revision identifiers, used by Alembic.
revision: str = "0be51fd8e0f5"
down_revision: Union[str, Sequence[str], None] = None
branch_labels: Union[str, Sequence[str], None] = None
depends_on: Union[str, Sequence[str], None] = None


def upgrade() -> None:
    """Upgrade schema."""
    op.execute("CREATE SCHEMA IF NOT EXISTS core")
    op.execute("CREATE SCHEMA IF NOT EXISTS academic")

    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table(
        "Document",
        sa.Column("id", sa.BigInteger(), autoincrement=False, nullable=False),
        sa.Column("name", sa.String(length=100), nullable=True),
        sa.Column(
            "created_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("now()"),
            nullable=False,
        ),
        sa.Column(
            "updated_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("now()"),
            nullable=False,
        ),
        sa.PrimaryKeyConstraint("id"),
        schema="academic",
    )
    op.create_table(
        "role",
        sa.Column("id", sa.SmallInteger(), autoincrement=True, nullable=False),
        sa.Column("code", sa.String(length=30), nullable=True),
        sa.Column("name", sa.String(length=80), nullable=True),
        sa.Column(
            "created_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("now()"),
            nullable=False,
        ),
        sa.Column(
            "updated_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("now()"),
            nullable=False,
        ),
        sa.PrimaryKeyConstraint("id"),
        sa.UniqueConstraint("code"),
        schema="core",
    )
    op.create_table(
        "person",
        sa.Column("id", sa.BigInteger(), autoincrement=True, nullable=False),
        sa.Column("first_names", sa.String(length=120), nullable=False),
        sa.Column("paternal_surname", sa.String(length=80), nullable=False),
        sa.Column("maternal_surname", sa.String(length=80), nullable=True),
        sa.Column("document_type_id", sa.BigInteger(), nullable=False),
        sa.Column("document_number", sa.String(length=20), nullable=False),
        sa.Column("birth_date", sa.Date(), nullable=True),
        sa.Column("sex", sa.CHAR(length=1), nullable=True),
        sa.Column("phone", sa.String(length=20), nullable=True),
        sa.Column(
            "created_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("now()"),
            nullable=False,
        ),
        sa.Column(
            "updated_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("now()"),
            nullable=False,
        ),
        sa.ForeignKeyConstraint(
            ["document_type_id"],
            ["academic.Document.id"],
        ),
        sa.PrimaryKeyConstraint("id"),
        sa.UniqueConstraint(
            "document_type_id", "document_number", name="uq_person_document"
        ),
        schema="core",
    )
    op.create_table(
        "user",
        sa.Column("id", sa.BigInteger(), autoincrement=True, nullable=False),
        sa.Column("person_id", sa.BigInteger(), nullable=False),
        sa.Column("email", sa.String(length=255), nullable=False),
        sa.Column("password_hash", sa.String(length=255), nullable=False),
        sa.Column("institutional_code", sa.String(length=30), nullable=True),
        sa.Column(
            "status",
            sa.Enum(
                "active",
                "inactive",
                "blocked",
                "pending_verification",
                name="user_status",
                schema="core",
            ),
            nullable=True,
        ),
        sa.Column("registration_date", sa.DateTime(timezone=True), nullable=True),
        sa.Column(
            "created_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("now()"),
            nullable=False,
        ),
        sa.Column(
            "updated_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("now()"),
            nullable=False,
        ),
        sa.ForeignKeyConstraint(
            ["person_id"],
            ["core.person.id"],
        ),
        sa.PrimaryKeyConstraint("id"),
        sa.UniqueConstraint("email"),
        sa.UniqueConstraint("person_id"),
        schema="core",
    )
    op.create_table(
        "exam",
        sa.Column("id", sa.BigInteger(), autoincrement=True, nullable=False),
        sa.Column("teacher_id", sa.BigInteger(), nullable=False),
        sa.Column("title", sa.String(length=200), nullable=False),
        sa.Column("description", sa.Text(), nullable=True),
        sa.Column("duration_minutes", sa.SmallInteger(), nullable=True),
        sa.Column(
            "status",
            sa.Enum(
                "draft", "published", "closed", name="exam_status", schema="academic"
            ),
            nullable=True,
        ),
        sa.Column(
            "created_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("now()"),
            nullable=False,
        ),
        sa.Column(
            "updated_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("now()"),
            nullable=False,
        ),
        sa.ForeignKeyConstraint(
            ["teacher_id"],
            ["core.user.id"],
        ),
        sa.PrimaryKeyConstraint("id"),
        schema="academic",
    )
    op.create_table(
        "user_role",
        sa.Column("user_id", sa.BigInteger(), nullable=False),
        sa.Column("role_id", sa.SmallInteger(), nullable=False),
        sa.Column(
            "created_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("now()"),
            nullable=False,
        ),
        sa.Column(
            "updated_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("now()"),
            nullable=False,
        ),
        sa.ForeignKeyConstraint(
            ["role_id"],
            ["core.role.id"],
        ),
        sa.ForeignKeyConstraint(
            ["user_id"],
            ["core.user.id"],
        ),
        sa.PrimaryKeyConstraint("user_id", "role_id"),
        schema="core",
    )
    op.create_table(
        "exam_attempt",
        sa.Column("id", sa.BigInteger(), autoincrement=True, nullable=False),
        sa.Column("exam_id", sa.BigInteger(), nullable=False),
        sa.Column("student_id", sa.BigInteger(), nullable=False),
        sa.Column(
            "status",
            sa.Enum(
                "in_progress",
                "submitted",
                "graded",
                name="attempt_status",
                schema="academic",
            ),
            nullable=True,
        ),
        sa.Column("started_at", sa.DateTime(timezone=True), nullable=True),
        sa.Column("submitted_at", sa.DateTime(timezone=True), nullable=True),
        sa.Column("score_obtained", sa.Numeric(precision=6, scale=2), nullable=True),
        sa.Column(
            "created_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("now()"),
            nullable=False,
        ),
        sa.Column(
            "updated_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("now()"),
            nullable=False,
        ),
        sa.ForeignKeyConstraint(
            ["exam_id"],
            ["academic.exam.id"],
        ),
        sa.ForeignKeyConstraint(
            ["student_id"],
            ["core.user.id"],
        ),
        sa.PrimaryKeyConstraint("id"),
        schema="academic",
    )
    op.create_table(
        "question",
        sa.Column("id", sa.BigInteger(), autoincrement=True, nullable=False),
        sa.Column("exam_id", sa.BigInteger(), nullable=False),
        sa.Column("statement", sa.Text(), nullable=False),
        sa.Column(
            "type",
            sa.Enum(
                "single_choice", "open_ended", name="question_type", schema="academic"
            ),
            nullable=True,
        ),
        sa.Column("score", sa.Numeric(precision=6, scale=2), nullable=True),
        sa.Column("order", sa.SmallInteger(), nullable=True),
        sa.Column(
            "created_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("now()"),
            nullable=False,
        ),
        sa.Column(
            "updated_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("now()"),
            nullable=False,
        ),
        sa.ForeignKeyConstraint(
            ["exam_id"],
            ["academic.exam.id"],
        ),
        sa.PrimaryKeyConstraint("id"),
        sa.UniqueConstraint("exam_id", "order", name="uq_question_order"),
        schema="academic",
    )
    op.create_table(
        "answer_option",
        sa.Column("id", sa.BigInteger(), autoincrement=True, nullable=False),
        sa.Column("question_id", sa.BigInteger(), nullable=False),
        sa.Column("text", sa.Text(), nullable=False),
        sa.Column("is_correct", sa.Boolean(), nullable=True),
        sa.Column("order", sa.SmallInteger(), nullable=True),
        sa.Column(
            "created_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("now()"),
            nullable=False,
        ),
        sa.Column(
            "updated_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("now()"),
            nullable=False,
        ),
        sa.ForeignKeyConstraint(
            ["question_id"],
            ["academic.question.id"],
        ),
        sa.PrimaryKeyConstraint("id"),
        sa.UniqueConstraint("question_id", "order", name="uq_option_order"),
        schema="academic",
    )
    op.create_table(
        "evidence",
        sa.Column("id", sa.BigInteger(), autoincrement=True, nullable=False),
        sa.Column("attempt_id", sa.BigInteger(), nullable=False),
        sa.Column("question_id", sa.BigInteger(), nullable=True),
        sa.Column(
            "type",
            sa.String(length=30),
            nullable=False,
            comment="CAMERA, SCREENSHOT, AUDIO",
        ),
        sa.Column(
            "reason",
            sa.String(length=50),
            nullable=True,
            comment="PERIODIC, TAB_CHANGE, FULLSCREEN_EXIT, CAMERA_BLOCKED, etc.",
        ),
        sa.Column("file_url", sa.String(length=500), nullable=False),
        sa.Column("captured_at", sa.DateTime(timezone=True), nullable=False),
        sa.Column(
            "created_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("now()"),
            nullable=False,
        ),
        sa.Column(
            "updated_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("now()"),
            nullable=False,
        ),
        sa.ForeignKeyConstraint(
            ["attempt_id"],
            ["academic.exam_attempt.id"],
        ),
        sa.ForeignKeyConstraint(
            ["question_id"],
            ["academic.question.id"],
        ),
        sa.PrimaryKeyConstraint("id"),
        schema="academic",
    )
    op.create_table(
        "attempt_answer",
        sa.Column("id", sa.BigInteger(), autoincrement=True, nullable=False),
        sa.Column("attempt_id", sa.BigInteger(), nullable=False),
        sa.Column("question_id", sa.BigInteger(), nullable=False),
        sa.Column("option_id", sa.BigInteger(), nullable=True),
        sa.Column("answer_text", sa.Text(), nullable=True),
        sa.Column("score_obtained", sa.Numeric(precision=6, scale=2), nullable=True),
        sa.Column(
            "created_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("now()"),
            nullable=False,
        ),
        sa.Column(
            "updated_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("now()"),
            nullable=False,
        ),
        sa.ForeignKeyConstraint(
            ["attempt_id"],
            ["academic.exam_attempt.id"],
        ),
        sa.ForeignKeyConstraint(
            ["option_id"],
            ["academic.answer_option.id"],
        ),
        sa.ForeignKeyConstraint(
            ["question_id"],
            ["academic.question.id"],
        ),
        sa.PrimaryKeyConstraint("id"),
        sa.UniqueConstraint("attempt_id", "question_id", name="uq_answer"),
        schema="academic",
    )
    # ### end Alembic commands ###


def downgrade() -> None:
    """Downgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_table("attempt_answer", schema="academic")
    op.drop_table("evidence", schema="academic")
    op.drop_table("answer_option", schema="academic")
    op.drop_table("question", schema="academic")
    op.drop_table("exam_attempt", schema="academic")
    op.drop_table("user_role", schema="core")
    op.drop_table("exam", schema="academic")
    op.drop_table("user", schema="core")
    op.drop_table("person", schema="core")
    op.drop_table("role", schema="core")
    op.drop_table("Document", schema="academic")
    # ### end Alembic commands ###

    op.execute("DROP TYPE IF EXISTS academic.attempt_status")
    op.execute("DROP TYPE IF EXISTS academic.exam_status")
    op.execute("DROP TYPE IF EXISTS academic.question_type")
    op.execute("DROP TYPE IF EXISTS core.user_status")
    op.execute("DROP SCHEMA IF EXISTS academic")
    op.execute("DROP SCHEMA IF EXISTS core")
